sql_to_mongo_transpiler/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> query
Rule 1     query -> SELECT select_list FROM table_list where_clause_opt group_by_clause_opt having_clause_opt order_by_clause_opt limit_clause_opt SEMICOLON
Rule 2     select_list -> STAR
Rule 3     table_list -> IDENTIFIER
Rule 4     table_list -> table_list COMMA IDENTIFIER
Rule 5     select_list -> column_list
Rule 6     column_list -> column
Rule 7     column_list -> column_list COMMA column
Rule 8     column -> identifier
Rule 9     column -> COUNT LPAREN STAR RPAREN
Rule 10    column -> COUNT LPAREN IDENTIFIER RPAREN
Rule 11    column -> MIN LPAREN IDENTIFIER RPAREN
Rule 12    column -> MAX LPAREN IDENTIFIER RPAREN
Rule 13    column -> AVG LPAREN IDENTIFIER RPAREN
Rule 14    column -> SUM LPAREN IDENTIFIER RPAREN
Rule 15    where_clause_opt -> WHERE condition
Rule 16    where_clause_opt -> empty
Rule 17    group_by_clause_opt -> GROUP BY group_list
Rule 18    group_by_clause_opt -> empty
Rule 19    group_list -> IDENTIFIER
Rule 20    group_list -> group_list COMMA IDENTIFIER
Rule 21    having_clause_opt -> HAVING condition
Rule 22    having_clause_opt -> empty
Rule 23    condition -> condition AND term
Rule 24    condition -> condition OR term
Rule 25    condition -> term
Rule 26    term -> comparison
Rule 27    aggregate_expr -> COUNT LPAREN STAR RPAREN
Rule 28    aggregate_expr -> COUNT LPAREN IDENTIFIER RPAREN
Rule 29    aggregate_expr -> MIN LPAREN IDENTIFIER RPAREN
Rule 30    aggregate_expr -> MAX LPAREN IDENTIFIER RPAREN
Rule 31    aggregate_expr -> AVG LPAREN IDENTIFIER RPAREN
Rule 32    aggregate_expr -> SUM LPAREN IDENTIFIER RPAREN
Rule 33    comparison -> identifier operator identifier
Rule 34    comparison -> identifier operator literal
Rule 35    comparison -> aggregate_expr operator literal
Rule 36    comparison -> IDENTIFIER BETWEEN literal AND literal
Rule 37    literal_list -> literal
Rule 38    literal_list -> literal_list COMMA literal
Rule 39    comparison -> IDENTIFIER IN LPAREN literal_list RPAREN
Rule 40    operator -> EQ
Rule 41    operator -> NE
Rule 42    operator -> GT
Rule 43    operator -> LT
Rule 44    operator -> GE
Rule 45    operator -> LE
Rule 46    literal -> NUMBER
Rule 47    literal -> STRING
Rule 48    order_by_clause_opt -> ORDER BY order_list
Rule 49    order_by_clause_opt -> empty
Rule 50    order_list -> order_item
Rule 51    order_list -> order_list COMMA order_item
Rule 52    order_item -> IDENTIFIER
Rule 53    order_item -> IDENTIFIER ASC
Rule 54    order_item -> IDENTIFIER DESC
Rule 55    limit_clause_opt -> LIMIT NUMBER
Rule 56    limit_clause_opt -> empty
Rule 57    empty -> <empty>
Rule 58    identifier -> IDENTIFIER
Rule 59    identifier -> IDENTIFIER DOT IDENTIFIER

Terminals, with rules where they appear

AND                  : 23 36
ASC                  : 53
AVG                  : 13 31
BETWEEN              : 36
BY                   : 17 48
COMMA                : 4 7 20 38 51
COUNT                : 9 10 27 28
DESC                 : 54
DOT                  : 59
EQ                   : 40
FROM                 : 1
GE                   : 44
GROUP                : 17
GT                   : 42
HAVING               : 21
IDENTIFIER           : 3 4 10 11 12 13 14 19 20 28 29 30 31 32 36 39 52 53 54 58 59 59
IN                   : 39
LE                   : 45
LIMIT                : 55
LPAREN               : 9 10 11 12 13 14 27 28 29 30 31 32 39
LT                   : 43
MAX                  : 12 30
MIN                  : 11 29
NE                   : 41
NUMBER               : 46 55
OR                   : 24
ORDER                : 48
RPAREN               : 9 10 11 12 13 14 27 28 29 30 31 32 39
SELECT               : 1
SEMICOLON            : 1
STAR                 : 2 9 27
STRING               : 47
SUM                  : 14 32
WHERE                : 15
error                : 

Nonterminals, with rules where they appear

aggregate_expr       : 35
column               : 6 7
column_list          : 5 7
comparison           : 26
condition            : 15 21 23 24
empty                : 16 18 22 49 56
group_by_clause_opt  : 1
group_list           : 17 20
having_clause_opt    : 1
identifier           : 8 33 33 34
limit_clause_opt     : 1
literal              : 34 35 36 36 37 38
literal_list         : 38 39
operator             : 33 34 35
order_by_clause_opt  : 1
order_item           : 50 51
order_list           : 48 51
query                : 0
select_list          : 1
table_list           : 1 4
term                 : 23 24 25
where_clause_opt     : 1

Parsing method: LALR

state 0

    (0) S' -> . query
    (1) query -> . SELECT select_list FROM table_list where_clause_opt group_by_clause_opt having_clause_opt order_by_clause_opt limit_clause_opt SEMICOLON

    SELECT          shift and go to state 2

    query                          shift and go to state 1

state 1

    (0) S' -> query .



state 2

    (1) query -> SELECT . select_list FROM table_list where_clause_opt group_by_clause_opt having_clause_opt order_by_clause_opt limit_clause_opt SEMICOLON
    (2) select_list -> . STAR
    (5) select_list -> . column_list
    (6) column_list -> . column
    (7) column_list -> . column_list COMMA column
    (8) column -> . identifier
    (9) column -> . COUNT LPAREN STAR RPAREN
    (10) column -> . COUNT LPAREN IDENTIFIER RPAREN
    (11) column -> . MIN LPAREN IDENTIFIER RPAREN
    (12) column -> . MAX LPAREN IDENTIFIER RPAREN
    (13) column -> . AVG LPAREN IDENTIFIER RPAREN
    (14) column -> . SUM LPAREN IDENTIFIER RPAREN
    (58) identifier -> . IDENTIFIER
    (59) identifier -> . IDENTIFIER DOT IDENTIFIER

    STAR            shift and go to state 4
    COUNT           shift and go to state 8
    MIN             shift and go to state 10
    MAX             shift and go to state 11
    AVG             shift and go to state 12
    SUM             shift and go to state 13
    IDENTIFIER      shift and go to state 9

    select_list                    shift and go to state 3
    column_list                    shift and go to state 5
    column                         shift and go to state 6
    identifier                     shift and go to state 7

state 3

    (1) query -> SELECT select_list . FROM table_list where_clause_opt group_by_clause_opt having_clause_opt order_by_clause_opt limit_clause_opt SEMICOLON

    FROM            shift and go to state 14


state 4

    (2) select_list -> STAR .

    FROM            reduce using rule 2 (select_list -> STAR .)


state 5

    (5) select_list -> column_list .
    (7) column_list -> column_list . COMMA column

    FROM            reduce using rule 5 (select_list -> column_list .)
    COMMA           shift and go to state 15


state 6

    (6) column_list -> column .

    COMMA           reduce using rule 6 (column_list -> column .)
    FROM            reduce using rule 6 (column_list -> column .)


state 7

    (8) column -> identifier .

    COMMA           reduce using rule 8 (column -> identifier .)
    FROM            reduce using rule 8 (column -> identifier .)


state 8

    (9) column -> COUNT . LPAREN STAR RPAREN
    (10) column -> COUNT . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 16


state 9

    (58) identifier -> IDENTIFIER .
    (59) identifier -> IDENTIFIER . DOT IDENTIFIER

    COMMA           reduce using rule 58 (identifier -> IDENTIFIER .)
    FROM            reduce using rule 58 (identifier -> IDENTIFIER .)
    AND             reduce using rule 58 (identifier -> IDENTIFIER .)
    OR              reduce using rule 58 (identifier -> IDENTIFIER .)
    GROUP           reduce using rule 58 (identifier -> IDENTIFIER .)
    HAVING          reduce using rule 58 (identifier -> IDENTIFIER .)
    ORDER           reduce using rule 58 (identifier -> IDENTIFIER .)
    LIMIT           reduce using rule 58 (identifier -> IDENTIFIER .)
    SEMICOLON       reduce using rule 58 (identifier -> IDENTIFIER .)
    DOT             shift and go to state 17


state 10

    (11) column -> MIN . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 18


state 11

    (12) column -> MAX . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 19


state 12

    (13) column -> AVG . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 20


state 13

    (14) column -> SUM . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 21


state 14

    (1) query -> SELECT select_list FROM . table_list where_clause_opt group_by_clause_opt having_clause_opt order_by_clause_opt limit_clause_opt SEMICOLON
    (3) table_list -> . IDENTIFIER
    (4) table_list -> . table_list COMMA IDENTIFIER

    IDENTIFIER      shift and go to state 23

    table_list                     shift and go to state 22

state 15

    (7) column_list -> column_list COMMA . column
    (8) column -> . identifier
    (9) column -> . COUNT LPAREN STAR RPAREN
    (10) column -> . COUNT LPAREN IDENTIFIER RPAREN
    (11) column -> . MIN LPAREN IDENTIFIER RPAREN
    (12) column -> . MAX LPAREN IDENTIFIER RPAREN
    (13) column -> . AVG LPAREN IDENTIFIER RPAREN
    (14) column -> . SUM LPAREN IDENTIFIER RPAREN
    (58) identifier -> . IDENTIFIER
    (59) identifier -> . IDENTIFIER DOT IDENTIFIER

    COUNT           shift and go to state 8
    MIN             shift and go to state 10
    MAX             shift and go to state 11
    AVG             shift and go to state 12
    SUM             shift and go to state 13
    IDENTIFIER      shift and go to state 9

    column                         shift and go to state 24
    identifier                     shift and go to state 7

state 16

    (9) column -> COUNT LPAREN . STAR RPAREN
    (10) column -> COUNT LPAREN . IDENTIFIER RPAREN

    STAR            shift and go to state 25
    IDENTIFIER      shift and go to state 26


state 17

    (59) identifier -> IDENTIFIER DOT . IDENTIFIER

    IDENTIFIER      shift and go to state 27


state 18

    (11) column -> MIN LPAREN . IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 28


state 19

    (12) column -> MAX LPAREN . IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 29


state 20

    (13) column -> AVG LPAREN . IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 30


state 21

    (14) column -> SUM LPAREN . IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 31


state 22

    (1) query -> SELECT select_list FROM table_list . where_clause_opt group_by_clause_opt having_clause_opt order_by_clause_opt limit_clause_opt SEMICOLON
    (4) table_list -> table_list . COMMA IDENTIFIER
    (15) where_clause_opt -> . WHERE condition
    (16) where_clause_opt -> . empty
    (57) empty -> .

    COMMA           shift and go to state 33
    WHERE           shift and go to state 34
    GROUP           reduce using rule 57 (empty -> .)
    HAVING          reduce using rule 57 (empty -> .)
    ORDER           reduce using rule 57 (empty -> .)
    LIMIT           reduce using rule 57 (empty -> .)
    SEMICOLON       reduce using rule 57 (empty -> .)

    where_clause_opt               shift and go to state 32
    empty                          shift and go to state 35

state 23

    (3) table_list -> IDENTIFIER .

    COMMA           reduce using rule 3 (table_list -> IDENTIFIER .)
    WHERE           reduce using rule 3 (table_list -> IDENTIFIER .)
    GROUP           reduce using rule 3 (table_list -> IDENTIFIER .)
    HAVING          reduce using rule 3 (table_list -> IDENTIFIER .)
    ORDER           reduce using rule 3 (table_list -> IDENTIFIER .)
    LIMIT           reduce using rule 3 (table_list -> IDENTIFIER .)
    SEMICOLON       reduce using rule 3 (table_list -> IDENTIFIER .)


state 24

    (7) column_list -> column_list COMMA column .

    COMMA           reduce using rule 7 (column_list -> column_list COMMA column .)
    FROM            reduce using rule 7 (column_list -> column_list COMMA column .)


state 25

    (9) column -> COUNT LPAREN STAR . RPAREN

    RPAREN          shift and go to state 36


state 26

    (10) column -> COUNT LPAREN IDENTIFIER . RPAREN

    RPAREN          shift and go to state 37


state 27

    (59) identifier -> IDENTIFIER DOT IDENTIFIER .

    COMMA           reduce using rule 59 (identifier -> IDENTIFIER DOT IDENTIFIER .)
    FROM            reduce using rule 59 (identifier -> IDENTIFIER DOT IDENTIFIER .)
    EQ              reduce using rule 59 (identifier -> IDENTIFIER DOT IDENTIFIER .)
    NE              reduce using rule 59 (identifier -> IDENTIFIER DOT IDENTIFIER .)
    GT              reduce using rule 59 (identifier -> IDENTIFIER DOT IDENTIFIER .)
    LT              reduce using rule 59 (identifier -> IDENTIFIER DOT IDENTIFIER .)
    GE              reduce using rule 59 (identifier -> IDENTIFIER DOT IDENTIFIER .)
    LE              reduce using rule 59 (identifier -> IDENTIFIER DOT IDENTIFIER .)
    AND             reduce using rule 59 (identifier -> IDENTIFIER DOT IDENTIFIER .)
    OR              reduce using rule 59 (identifier -> IDENTIFIER DOT IDENTIFIER .)
    GROUP           reduce using rule 59 (identifier -> IDENTIFIER DOT IDENTIFIER .)
    HAVING          reduce using rule 59 (identifier -> IDENTIFIER DOT IDENTIFIER .)
    ORDER           reduce using rule 59 (identifier -> IDENTIFIER DOT IDENTIFIER .)
    LIMIT           reduce using rule 59 (identifier -> IDENTIFIER DOT IDENTIFIER .)
    SEMICOLON       reduce using rule 59 (identifier -> IDENTIFIER DOT IDENTIFIER .)


state 28

    (11) column -> MIN LPAREN IDENTIFIER . RPAREN

    RPAREN          shift and go to state 38


state 29

    (12) column -> MAX LPAREN IDENTIFIER . RPAREN

    RPAREN          shift and go to state 39


state 30

    (13) column -> AVG LPAREN IDENTIFIER . RPAREN

    RPAREN          shift and go to state 40


state 31

    (14) column -> SUM LPAREN IDENTIFIER . RPAREN

    RPAREN          shift and go to state 41


state 32

    (1) query -> SELECT select_list FROM table_list where_clause_opt . group_by_clause_opt having_clause_opt order_by_clause_opt limit_clause_opt SEMICOLON
    (17) group_by_clause_opt -> . GROUP BY group_list
    (18) group_by_clause_opt -> . empty
    (57) empty -> .

    GROUP           shift and go to state 43
    HAVING          reduce using rule 57 (empty -> .)
    ORDER           reduce using rule 57 (empty -> .)
    LIMIT           reduce using rule 57 (empty -> .)
    SEMICOLON       reduce using rule 57 (empty -> .)

    group_by_clause_opt            shift and go to state 42
    empty                          shift and go to state 44

state 33

    (4) table_list -> table_list COMMA . IDENTIFIER

    IDENTIFIER      shift and go to state 45


state 34

    (15) where_clause_opt -> WHERE . condition
    (23) condition -> . condition AND term
    (24) condition -> . condition OR term
    (25) condition -> . term
    (26) term -> . comparison
    (33) comparison -> . identifier operator identifier
    (34) comparison -> . identifier operator literal
    (35) comparison -> . aggregate_expr operator literal
    (36) comparison -> . IDENTIFIER BETWEEN literal AND literal
    (39) comparison -> . IDENTIFIER IN LPAREN literal_list RPAREN
    (58) identifier -> . IDENTIFIER
    (59) identifier -> . IDENTIFIER DOT IDENTIFIER
    (27) aggregate_expr -> . COUNT LPAREN STAR RPAREN
    (28) aggregate_expr -> . COUNT LPAREN IDENTIFIER RPAREN
    (29) aggregate_expr -> . MIN LPAREN IDENTIFIER RPAREN
    (30) aggregate_expr -> . MAX LPAREN IDENTIFIER RPAREN
    (31) aggregate_expr -> . AVG LPAREN IDENTIFIER RPAREN
    (32) aggregate_expr -> . SUM LPAREN IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 51
    COUNT           shift and go to state 52
    MIN             shift and go to state 53
    MAX             shift and go to state 54
    AVG             shift and go to state 55
    SUM             shift and go to state 56

    condition                      shift and go to state 46
    term                           shift and go to state 47
    comparison                     shift and go to state 48
    identifier                     shift and go to state 49
    aggregate_expr                 shift and go to state 50

state 35

    (16) where_clause_opt -> empty .

    GROUP           reduce using rule 16 (where_clause_opt -> empty .)
    HAVING          reduce using rule 16 (where_clause_opt -> empty .)
    ORDER           reduce using rule 16 (where_clause_opt -> empty .)
    LIMIT           reduce using rule 16 (where_clause_opt -> empty .)
    SEMICOLON       reduce using rule 16 (where_clause_opt -> empty .)


state 36

    (9) column -> COUNT LPAREN STAR RPAREN .

    COMMA           reduce using rule 9 (column -> COUNT LPAREN STAR RPAREN .)
    FROM            reduce using rule 9 (column -> COUNT LPAREN STAR RPAREN .)


state 37

    (10) column -> COUNT LPAREN IDENTIFIER RPAREN .

    COMMA           reduce using rule 10 (column -> COUNT LPAREN IDENTIFIER RPAREN .)
    FROM            reduce using rule 10 (column -> COUNT LPAREN IDENTIFIER RPAREN .)


state 38

    (11) column -> MIN LPAREN IDENTIFIER RPAREN .

    COMMA           reduce using rule 11 (column -> MIN LPAREN IDENTIFIER RPAREN .)
    FROM            reduce using rule 11 (column -> MIN LPAREN IDENTIFIER RPAREN .)


state 39

    (12) column -> MAX LPAREN IDENTIFIER RPAREN .

    COMMA           reduce using rule 12 (column -> MAX LPAREN IDENTIFIER RPAREN .)
    FROM            reduce using rule 12 (column -> MAX LPAREN IDENTIFIER RPAREN .)


state 40

    (13) column -> AVG LPAREN IDENTIFIER RPAREN .

    COMMA           reduce using rule 13 (column -> AVG LPAREN IDENTIFIER RPAREN .)
    FROM            reduce using rule 13 (column -> AVG LPAREN IDENTIFIER RPAREN .)


state 41

    (14) column -> SUM LPAREN IDENTIFIER RPAREN .

    COMMA           reduce using rule 14 (column -> SUM LPAREN IDENTIFIER RPAREN .)
    FROM            reduce using rule 14 (column -> SUM LPAREN IDENTIFIER RPAREN .)


state 42

    (1) query -> SELECT select_list FROM table_list where_clause_opt group_by_clause_opt . having_clause_opt order_by_clause_opt limit_clause_opt SEMICOLON
    (21) having_clause_opt -> . HAVING condition
    (22) having_clause_opt -> . empty
    (57) empty -> .

    HAVING          shift and go to state 58
    ORDER           reduce using rule 57 (empty -> .)
    LIMIT           reduce using rule 57 (empty -> .)
    SEMICOLON       reduce using rule 57 (empty -> .)

    having_clause_opt              shift and go to state 57
    empty                          shift and go to state 59

state 43

    (17) group_by_clause_opt -> GROUP . BY group_list

    BY              shift and go to state 60


state 44

    (18) group_by_clause_opt -> empty .

    HAVING          reduce using rule 18 (group_by_clause_opt -> empty .)
    ORDER           reduce using rule 18 (group_by_clause_opt -> empty .)
    LIMIT           reduce using rule 18 (group_by_clause_opt -> empty .)
    SEMICOLON       reduce using rule 18 (group_by_clause_opt -> empty .)


state 45

    (4) table_list -> table_list COMMA IDENTIFIER .

    COMMA           reduce using rule 4 (table_list -> table_list COMMA IDENTIFIER .)
    WHERE           reduce using rule 4 (table_list -> table_list COMMA IDENTIFIER .)
    GROUP           reduce using rule 4 (table_list -> table_list COMMA IDENTIFIER .)
    HAVING          reduce using rule 4 (table_list -> table_list COMMA IDENTIFIER .)
    ORDER           reduce using rule 4 (table_list -> table_list COMMA IDENTIFIER .)
    LIMIT           reduce using rule 4 (table_list -> table_list COMMA IDENTIFIER .)
    SEMICOLON       reduce using rule 4 (table_list -> table_list COMMA IDENTIFIER .)


state 46

    (15) where_clause_opt -> WHERE condition .
    (23) condition -> condition . AND term
    (24) condition -> condition . OR term

    GROUP           reduce using rule 15 (where_clause_opt -> WHERE condition .)
    HAVING          reduce using rule 15 (where_clause_opt -> WHERE condition .)
    ORDER           reduce using rule 15 (where_clause_opt -> WHERE condition .)
    LIMIT           reduce using rule 15 (where_clause_opt -> WHERE condition .)
    SEMICOLON       reduce using rule 15 (where_clause_opt -> WHERE condition .)
    AND             shift and go to state 61
    OR              shift and go to state 62


state 47

    (25) condition -> term .

    AND             reduce using rule 25 (condition -> term .)
    OR              reduce using rule 25 (condition -> term .)
    GROUP           reduce using rule 25 (condition -> term .)
    HAVING          reduce using rule 25 (condition -> term .)
    ORDER           reduce using rule 25 (condition -> term .)
    LIMIT           reduce using rule 25 (condition -> term .)
    SEMICOLON       reduce using rule 25 (condition -> term .)


state 48

    (26) term -> comparison .

    AND             reduce using rule 26 (term -> comparison .)
    OR              reduce using rule 26 (term -> comparison .)
    GROUP           reduce using rule 26 (term -> comparison .)
    HAVING          reduce using rule 26 (term -> comparison .)
    ORDER           reduce using rule 26 (term -> comparison .)
    LIMIT           reduce using rule 26 (term -> comparison .)
    SEMICOLON       reduce using rule 26 (term -> comparison .)


state 49

    (33) comparison -> identifier . operator identifier
    (34) comparison -> identifier . operator literal
    (40) operator -> . EQ
    (41) operator -> . NE
    (42) operator -> . GT
    (43) operator -> . LT
    (44) operator -> . GE
    (45) operator -> . LE

    EQ              shift and go to state 64
    NE              shift and go to state 65
    GT              shift and go to state 66
    LT              shift and go to state 67
    GE              shift and go to state 68
    LE              shift and go to state 69

    operator                       shift and go to state 63

state 50

    (35) comparison -> aggregate_expr . operator literal
    (40) operator -> . EQ
    (41) operator -> . NE
    (42) operator -> . GT
    (43) operator -> . LT
    (44) operator -> . GE
    (45) operator -> . LE

    EQ              shift and go to state 64
    NE              shift and go to state 65
    GT              shift and go to state 66
    LT              shift and go to state 67
    GE              shift and go to state 68
    LE              shift and go to state 69

    operator                       shift and go to state 70

state 51

    (36) comparison -> IDENTIFIER . BETWEEN literal AND literal
    (39) comparison -> IDENTIFIER . IN LPAREN literal_list RPAREN
    (58) identifier -> IDENTIFIER .
    (59) identifier -> IDENTIFIER . DOT IDENTIFIER

    BETWEEN         shift and go to state 71
    IN              shift and go to state 72
    EQ              reduce using rule 58 (identifier -> IDENTIFIER .)
    NE              reduce using rule 58 (identifier -> IDENTIFIER .)
    GT              reduce using rule 58 (identifier -> IDENTIFIER .)
    LT              reduce using rule 58 (identifier -> IDENTIFIER .)
    GE              reduce using rule 58 (identifier -> IDENTIFIER .)
    LE              reduce using rule 58 (identifier -> IDENTIFIER .)
    DOT             shift and go to state 17


state 52

    (27) aggregate_expr -> COUNT . LPAREN STAR RPAREN
    (28) aggregate_expr -> COUNT . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 73


state 53

    (29) aggregate_expr -> MIN . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 74


state 54

    (30) aggregate_expr -> MAX . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 75


state 55

    (31) aggregate_expr -> AVG . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 76


state 56

    (32) aggregate_expr -> SUM . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 77


state 57

    (1) query -> SELECT select_list FROM table_list where_clause_opt group_by_clause_opt having_clause_opt . order_by_clause_opt limit_clause_opt SEMICOLON
    (48) order_by_clause_opt -> . ORDER BY order_list
    (49) order_by_clause_opt -> . empty
    (57) empty -> .

    ORDER           shift and go to state 79
    LIMIT           reduce using rule 57 (empty -> .)
    SEMICOLON       reduce using rule 57 (empty -> .)

    order_by_clause_opt            shift and go to state 78
    empty                          shift and go to state 80

state 58
